crates/paigasus-helikon-providers-bedrock/tests/snapshots/converse_request__inference_config_temperature_top_p_max_tokens.snap
---
source: crates/paigasus-helikon-providers-bedrock/tests/converse_request.rs
expression: to_wire_json_test(&p)
---
{
  "inferenceConfig": {
    "maxTokens": 256,
    "temperature": 0.699999988079071,
    "topP": 0.8999999761581421
  },
  "messages": [
    {
      "content": [
        {
          "text": "hi"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": null
}
