crates/paigasus-helikon-providers-bedrock/tests/snapshots/converse_request__tool_call_and_result.snap
---
source: crates/paigasus-helikon-providers-bedrock/tests/converse_request.rs
expression: to_wire_json_test(&p)
---
{
  "inferenceConfig": null,
  "messages": [
    {
      "content": [
        {
          "text": "What's my balance?"
        }
      ],
      "role": "user"
    },
    {
      "content": [
        {
          "toolUse": {
            "name": "get_balance",
            "toolUseId": "tu_1"
          }
        }
      ],
      "role": "assistant"
    },
    {
      "content": [
        {
          "toolResult": {
            "content": [
              {
                "text": "$1,234.56"
              }
            ],
            "toolUseId": "tu_1"
          }
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "anthropic.claude-3-5-sonnet-20241022-v2:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": {
    "toolChoice": null,
    "tools": [
      {
        "toolSpec": {
          "description": "Get account balance",
          "inputSchema": {
            "json": "<Document>"
          },
          "name": "get_balance"
        }
      }
    ]
  }
}
