crates/paigasus-helikon-providers-bedrock/tests/snapshots/converse_request__unsupported_family_json_schema_degrades_to_no_synthesis.snap
---
source: crates/paigasus-helikon-providers-bedrock/tests/converse_request.rs
expression: wire
---
{
  "inferenceConfig": null,
  "messages": [
    {
      "content": [
        {
          "text": "classify this"
        }
      ],
      "role": "user"
    }
  ],
  "modelId": "meta.llama3-1-70b-instruct-v1:0",
  "synthesizing": false,
  "system": [],
  "toolConfig": null
}
